# Phoenix_Engine_v2

./: .gitattributes  .gitignore  README.md  SwissEngine.rise_trans  probe_swiss.py  pyproject.toml  test_final_core.py
src/phoenix_engine/application/: chart_service.py
src/phoenix_engine/core/config/: calibration.py  calibration.py.bak
src/phoenix_engine/core/math/: __init__.py  angles.py  interpolation.py  solver.py
src/phoenix_engine/domain/: bodies.py  enums.py  enums.py.bak  exceptions.py  models.py
src/phoenix_engine/infrastructure/astronomy/swiss/: engine.py  engine.py.bak  manager.py  manager.py.bak  provider.py  provider.py.bak
src/phoenix_engine/infrastructure/time/: convert.py  scale.py  scale.py.bak
src/phoenix_engine/tests/integration/: test_panchanga_events.py  test_tithi_sanity.py
src/phoenix_engine/tests/unit/: test_solver.py  test_traps.py
src/phoenix_engine/vedic/calculations/: houses.py  planets.py
src/phoenix_engine/vedic/panchanga/: events.py  finder.py  temporal.py
src/phoenix_engine_v2.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/integration/: test_rise_set_policy.py
